--- a/css/style.css
+++ b/css/style.css
@@ -82,11 +82,17 @@ nav {
   background-color: #fff;
 }
 
+.primary-menu .container{
+  margin: 0 auto;
+  padding: 0;
+}
+
 .primary-menu ul {
   /* display: flex;
   justify-content: space-between; */
-  padding: 0;
+  padding: 10px 5px;
   font-size: 0;
+  margin: 0 auto;
 }
 
 .primary-menu ul li {
@@ -372,6 +378,11 @@ nav {
   height: 60px;
   border-radius: 100%;
   background: url(/images/next.png) center center no-repeat;
+}
+
+.banner .container{
+  margin: 0 auto;
+  padding: 0;
 }
 
 .banner .main-slider .owl-nav .owl-prev {
